##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pystow
version = 0.1.10
description = Easily pick a place to store data for your python package.
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/cthoyt/pystow
download_url = https://github.com/cthoyt/pystow/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/pystow/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    caching
    file management

[options]
install_requires =
    click
    requests
    tqdm

zip_safe = false
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
rdf =
    rdflib
xml =
    lxml
pandas =
    pandas
aws =
    boto3
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi

[options.entry_points]
console_scripts =
    pystow = pystow.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pystow
omit =
    tests/*
    docs/*
    src/pystow/cli.py
    src/pystow/__main__.py

[coverage:paths]
source =
    src/pystow
    .tox/*/lib/python*/site-packages/pystow

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style=sphinx
strictness=short
