##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pystow
version = 0.5.7-dev
description = Easily pick a place to store data for your python package.
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/cthoyt/pystow
download_url = https://github.com/cthoyt/pystow/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/pystow/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    caching
    file management

[options]
install_requires =
    click
    requests
    tqdm

zip_safe = false
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
rdf =
    rdflib
xml =
    lxml
pandas =
    pandas
aws =
    boto3
tests =
    coverage
    pytest
    requests_file
docs =
    sphinx<8.0
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi

[options.entry_points]
console_scripts =
    pystow = pystow.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pystow
omit =
    tests/*
    docs/*
    src/pystow/cli.py
    src/pystow/__main__.py

[coverage:paths]
source =
    src/pystow
    .tox/*/lib/python*/site-packages/pystow

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = full
# enable = DAR104

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S403
    # pickle
    S301
    # line break before binary operator
    W503
    S410
    S320
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    pystow
    tests
